updated sanity files to match data_sim doc

--- a/sanity/cifar_subs_class_means.ipynb
+++ b/sanity/cifar_subs_class_means.ipynb
@@ -74,16 +74,6 @@
       "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /home/jovyan/.netrc\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mjmryan\u001b[0m to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -97,7 +87,8 @@
     "from get_grok import get_data\n",
     "import wandb\n",
     "KEY = '8b81e715f744716c02701d1b0a23c4342e62ad45'\n",
-    "wandb.login(key = KEY)"
+    "wandb.login(key = KEY)\n",
+    "from helper_process import process_merge, top_x_percent_per_label, bottom_x_percent_per_label"
    ]
   },
   {
@@ -105,17 +96,7 @@
    "id": "7cde5025-090c-46e8-bb1c-2ae8038e3c9d",
    "metadata": {},
    "source": [
-    "This notebook will go through traditional CIFAR Resnet18 Experiment and traditional MNIST Resnet18 across 3 seeds (515, 650, 713) with the same initialization hyperparameters. At the top of each experiment, there will be a confirmation that iteration 0 and 1 of seed 515 have identical class means across epochs to ensure reproducibility."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "576fd12e-b45b-4a4c-b893-9bc44ddbc2c3",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "### Workhorse Functions"
+    "This notebook will go through 3 experiments of 'subsetting' the CIFAR data to see how it effects Jaccard similarity. 1k Total train samples takes a random (same across seeds) 1k images (100 from each class) and trains Resnet on these 1k images. 2 Classes combines the 10 classes into 2 based on whether the image is a vehicle or an animal (20k images vs 30k images) and trains Resnet on these new classes. Label Change grabs 10 random images (same across seeds) and randomly selects a new class (purposefully mislabeling) and trains a Resnet on all the data."
    ]
   },
   {
@@ -330,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "a23f7443-5ac4-4b2e-827d-bc2341f8eaa0",
    "metadata": {},
    "outputs": [],
@@ -356,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "0c55fe2f-e681-466b-a07b-e6738f4cb462",
    "metadata": {},
    "outputs": [],
@@ -367,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "a6e81207-3daf-49ff-a7b8-9e42200475a2",
    "metadata": {},
    "outputs": [
@@ -387,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "153a1f60-ca9c-4133-aead-08927ce089d0",
    "metadata": {},
    "outputs": [
@@ -415,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "f2d94cc1-9c50-4f86-9549-4dd336853530",
    "metadata": {},
    "outputs": [],
@@ -426,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "33c44300-e5a1-4a06-a98a-7354bc47e8c7",
    "metadata": {},
    "outputs": [
@@ -446,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "b5a92e23-ebf4-45a3-a6bc-9ca4423fcc78",
    "metadata": {},
    "outputs": [
@@ -474,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "f0a73e62-35a8-4fb3-8a1b-83631d18b49f",
    "metadata": {},
    "outputs": [],
@@ -500,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "ea2b8dfe-755b-4811-b039-8933820f27ec",
    "metadata": {},
    "outputs": [],
@@ -511,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "266684dc-87dc-44c4-958b-f19ffb1e5bcf",
    "metadata": {},
    "outputs": [
@@ -531,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "f91fe108-7306-47eb-b11d-d71233767f35",
    "metadata": {},
    "outputs": [
@@ -559,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "3a0c3ec2-a676-4379-aad4-fe182f30d0bd",
    "metadata": {},
    "outputs": [],
@@ -570,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "d145b4cf-6745-4ae5-887c-ba8b0302ef17",
    "metadata": {},
    "outputs": [
@@ -590,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "bd7e7d76-8bb3-4b76-9c30-d719ae58b4d8",
    "metadata": {},
    "outputs": [
@@ -618,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "58714bad-3fbc-4b8c-a3e4-1cf3abd47fa9",
    "metadata": {},
    "outputs": [],
@@ -644,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "d7be095b-5dfd-4942-aac4-d1d618142a26",
    "metadata": {},
    "outputs": [],
@@ -655,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "54d4a8e2-fb49-45b0-bf20-449c80cedded",
    "metadata": {},
    "outputs": [
@@ -675,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "5596e9bd-832f-4ca5-8429-b254765861a3",
    "metadata": {},
    "outputs": [
@@ -703,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "81f0acc8-ff2f-4356-b3db-f3a2c0011e96",
    "metadata": {},
    "outputs": [
@@ -713,13 +694,13 @@
      "text": [
       "Index 9749 in Union: False\n",
       "Index 28898 in Union: False\n",
-      "Index 49412 in Union: False\n",
+      "Index 49412 in Union: True\n",
       "Index 9282 in Union: False\n",
-      "Index 36567 in Union: False\n",
+      "Index 36567 in Union: True\n",
       "Index 4740 in Union: False\n",
-      "Index 39328 in Union: False\n",
+      "Index 39328 in Union: True\n",
       "Index 16927 in Union: False\n",
-      "Index 44496 in Union: False\n",
+      "Index 44496 in Union: True\n",
       "Index 2688 in Union: False\n"
      ]
     }
@@ -731,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "685e34f9-a26d-400f-b293-61295fe33e29",
    "metadata": {},
    "outputs": [
@@ -739,9 +720,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jaccard Similarity: 0.07984755530767801\n",
-      "Size of Union: 10758\n",
-      "Size of Intersection: 859\n"
+      "Jaccard Similarity: 0.020079025885009275\n",
+      "Size of Union: 12401\n",
+      "Size of Intersection: 249\n"
      ]
     }
    ],
@@ -751,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "id": "248f5a09-c0a8-477e-8316-6709d0c5994f",
    "metadata": {},
    "outputs": [
@@ -779,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "id": "d38fa917-3867-4f4b-99dd-25e0dc5661d0",
    "metadata": {},
    "outputs": [
@@ -791,7 +772,7 @@
       "Index 28898 in Union: False\n",
       "Index 49412 in Union: False\n",
       "Index 9282 in Union: False\n",
-      "Index 36567 in Union: False\n",
+      "Index 36567 in Union: True\n",
       "Index 4740 in Union: False\n",
       "Index 39328 in Union: False\n",
       "Index 16927 in Union: False\n",
@@ -807,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "04098116-8af4-4850-bfe8-4e2edbe0bf24",
    "metadata": {},
    "outputs": [
@@ -845,112 +826,112 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2688</th>\n",
-       "      <td>0.683455</td>\n",
+       "      <td>26.927023</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2688.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>0.568842</td>\n",
+       "      <td>27.282066</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>0.714764</td>\n",
+       "      <td>29.584230</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4740</th>\n",
-       "      <td>0.741977</td>\n",
+       "      <td>30.494396</td>\n",
        "      <td>0.0</td>\n",
        "      <td>4740.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.785641</td>\n",
+       "      <td>29.411949</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.764125</td>\n",
+       "      <td>31.859819</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9282</th>\n",
-       "      <td>0.666783</td>\n",
+       "      <td>29.290165</td>\n",
        "      <td>3.0</td>\n",
        "      <td>9282.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>0.779143</td>\n",
+       "      <td>29.947004</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>0.695057</td>\n",
+       "      <td>27.852316</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9749</th>\n",
-       "      <td>0.658805</td>\n",
+       "      <td>32.424957</td>\n",
        "      <td>5.0</td>\n",
        "      <td>9749.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.622609</td>\n",
+       "      <td>28.669069</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.559387</td>\n",
+       "      <td>28.992195</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16927</th>\n",
-       "      <td>0.581304</td>\n",
+       "      <td>28.671465</td>\n",
        "      <td>5.0</td>\n",
        "      <td>16927.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.631494</td>\n",
+       "      <td>28.765451</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.626594</td>\n",
+       "      <td>30.716932</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28898</th>\n",
-       "      <td>0.711015</td>\n",
+       "      <td>29.686842</td>\n",
        "      <td>6.0</td>\n",
        "      <td>28898.0</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>0.726841</td>\n",
+       "      <td>28.213039</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>0.645662</td>\n",
+       "      <td>27.726608</td>\n",
        "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36567</th>\n",
-       "      <td>0.563574</td>\n",
+       "      <td>28.830286</td>\n",
        "      <td>5.0</td>\n",
        "      <td>36567.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.547170</td>\n",
+       "      <td>25.062857</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.550981</td>\n",
+       "      <td>33.718384</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39328</th>\n",
-       "      <td>0.635402</td>\n",
+       "      <td>29.588921</td>\n",
        "      <td>9.0</td>\n",
        "      <td>39328.0</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>0.694663</td>\n",
+       "      <td>33.928448</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>0.722221</td>\n",
+       "      <td>31.063854</td>\n",
        "      <td>9.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44496</th>\n",
-       "      <td>0.650794</td>\n",
+       "      <td>29.698242</td>\n",
        "      <td>1.0</td>\n",
        "      <td>44496.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.656589</td>\n",
+       "      <td>31.317736</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.702334</td>\n",
+       "      <td>35.274971</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>49412</th>\n",
-       "      <td>0.703564</td>\n",
+       "      <td>29.557550</td>\n",
        "      <td>9.0</td>\n",
        "      <td>49412.0</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>0.691691</td>\n",
+       "      <td>32.537693</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>0.666334</td>\n",
+       "      <td>32.055241</td>\n",
        "      <td>9.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -958,17 +939,17 @@
        "</div>"
       ],
       "text/plain": [
-       "         dist_0  labels      idx  y_hats_0    dist_1  y_hats_1    dist_2  \\\n",
-       "2688   0.683455     2.0   2688.0       2.0  0.568842       2.0  0.714764   \n",
-       "4740   0.741977     0.0   4740.0       0.0  0.785641       0.0  0.764125   \n",
-       "9282   0.666783     3.0   9282.0       3.0  0.779143       3.0  0.695057   \n",
-       "9749   0.658805     5.0   9749.0       5.0  0.622609       5.0  0.559387   \n",
-       "16927  0.581304     5.0  16927.0       5.0  0.631494       5.0  0.626594   \n",
-       "28898  0.711015     6.0  28898.0       6.0  0.726841       6.0  0.645662   \n",
-       "36567  0.563574     5.0  36567.0       5.0  0.547170       5.0  0.550981   \n",
-       "39328  0.635402     9.0  39328.0       9.0  0.694663       9.0  0.722221   \n",
-       "44496  0.650794     1.0  44496.0       1.0  0.656589       1.0  0.702334   \n",
-       "49412  0.703564     9.0  49412.0       9.0  0.691691       9.0  0.666334   \n",
+       "          dist_0  labels      idx  y_hats_0     dist_1  y_hats_1     dist_2  \\\n",
+       "2688   26.927023     2.0   2688.0       2.0  27.282066       2.0  29.584230   \n",
+       "4740   30.494396     0.0   4740.0       0.0  29.411949       0.0  31.859819   \n",
+       "9282   29.290165     3.0   9282.0       3.0  29.947004       3.0  27.852316   \n",
+       "9749   32.424957     5.0   9749.0       5.0  28.669069       5.0  28.992195   \n",
+       "16927  28.671465     5.0  16927.0       5.0  28.765451       5.0  30.716932   \n",
+       "28898  29.686842     6.0  28898.0       6.0  28.213039       6.0  27.726608   \n",
+       "36567  28.830286     5.0  36567.0       5.0  25.062857       5.0  33.718384   \n",
+       "39328  29.588921     9.0  39328.0       9.0  33.928448       9.0  31.063854   \n",
+       "44496  29.698242     1.0  44496.0       1.0  31.317736       1.0  35.274971   \n",
+       "49412  29.557550     9.0  49412.0       9.0  32.537693       9.0  32.055241   \n",
        "\n",
        "       y_hats_2  \n",
        "2688        2.0  \n",
@@ -983,7 +964,7 @@
        "49412       9.0  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "id": "2e5caa6e-4418-4cc3-a598-8d695f808680",
    "metadata": {},
    "outputs": [],
@@ -1014,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "id": "13617420-15ef-41a4-a771-950761c244c3",
    "metadata": {},
    "outputs": [
@@ -1034,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "id": "bae41266-2efe-49ff-b546-4fde00b9b5b1",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "id": "75e18457-3a0c-4fea-8c57-1f344a1db91a",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "id": "c0576e58-3237-492c-874e-cb713b7b2a87",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "id": "f1e003c4-82bb-4382-b0c5-d966e0416bac",
    "metadata": {},
    "outputs": [
@@ -1138,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "id": "784f06e8-6b6e-4cf7-b9ae-d9f4dc5c7fb1",
    "metadata": {},
    "outputs": [
@@ -1166,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "id": "42a445cc-084d-49d2-abdf-6b69b806ffe8",
    "metadata": {},
    "outputs": [
@@ -1342,7 +1323,7 @@
        "49412       9.0  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,14 +1332,6 @@
     "changed_idxs = [9749, 28898, 49412, 9282, 36567, 4740, 39328, 16927, 44496, 2688]\n",
     "merged_df[merged_df['idx'].isin(changed_idxs)]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4503663b-49c5-483a-9059-d275c715afa7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
