--- a/sanity/resnet_class_means.ipynb
+++ b/sanity/resnet_class_means.ipynb
@@ -18,13 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fbee297f-821a-4699-ab6b-64ed0296e6ff",
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     },
     "scrolled": true
    },
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1a214193-ff0a-4f1d-9ed6-df120f1a3159",
    "metadata": {},
    "outputs": [
@@ -71,6 +70,7 @@
       "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend.  Please refer to https://wandb.me/wandb-core for more information.\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m If you're specifying your api key in code, ensure this code is not shared publicly.\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Consider setting the WANDB_API_KEY environment variable, or running `wandb login` from the command line.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: No netrc file found, creating one.\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /home/jovyan/.netrc\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mjmryan\u001b[0m to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
      ]
@@ -96,7 +96,7 @@
    "id": "7cde5025-090c-46e8-bb1c-2ae8038e3c9d",
    "metadata": {},
    "source": [
-    "This notebook will go through CIFAR and MNIST flattened to go through a simple MLP with 5 hidden layers (7 total layers) where each hidden layer is dim 512 to 512. This goes across 3 seeds (515, 650, 713) with the same initialization hyperparameters. "
+    "This notebook will go through traditional CIFAR Resnet18 Experiment and traditional MNIST Resnet18 across 3 seeds (515, 650, 713) with the same initialization hyperparameters."
    ]
   },
   {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e1d7f926-983d-4bbc-a9a1-92e88105fe45",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "58b4e5fc-7530-4472-9630-a04e7bd3ed72",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "243b5091-c1d7-4c81-9255-4f08de3a0ba4",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8a62c14f-4371-4973-a4f3-05c2e178f352",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "37b68b28-f447-4700-a37c-e3405389c2f6",
    "metadata": {},
    "outputs": [],
@@ -306,17 +306,17 @@
    "id": "fffa2ccf-415c-4128-a5d1-8389f5b4cafd",
    "metadata": {},
    "source": [
-    "# CIFAR Flattned MLP"
+    "# Traditional CIFAR ResNet18"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a23f7443-5ac4-4b2e-827d-bc2341f8eaa0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "paths = [f'class_means_distance/sanity_no_shuffle_data_cifar10_mlp_seed_{x}_iter_0_max_epochs_400/train/train_raw_activations_epoch_' for x in [515,650,713]]"
+    "paths = [f'class_means_distance/sanity_no_shuffle_data_cifar10_resnet18_seed_{x}_iter_0_max_epochs_400/train/train_raw_activations_epoch_' for x in [515,650,713]]"
    ]
   },
   {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0c55fe2f-e681-466b-a07b-e6738f4cb462",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a6e81207-3daf-49ff-a7b8-9e42200475a2",
    "metadata": {},
    "outputs": [
@@ -356,9 +356,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jaccard Similarity: 0.41501103752759383\n",
-      "Size of Union: 7248\n",
-      "Size of Intersection: 3008\n"
+      "Jaccard Similarity: 0.05752561071710008\n",
+      "Size of Union: 11421\n",
+      "Size of Intersection: 657\n"
      ]
     }
    ],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "153a1f60-ca9c-4133-aead-08927ce089d0",
    "metadata": {},
    "outputs": [
@@ -376,9 +376,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jaccard Similarity: 0.3764344809180678\n",
-      "Size of Union: 7494\n",
-      "Size of Intersection: 2821\n"
+      "Jaccard Similarity: 0.022979139504563234\n",
+      "Size of Union: 12272\n",
+      "Size of Intersection: 282\n"
      ]
     }
    ],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f2d94cc1-9c50-4f86-9549-4dd336853530",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "33c44300-e5a1-4a06-a98a-7354bc47e8c7",
    "metadata": {},
    "outputs": [
@@ -415,9 +415,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jaccard Similarity: 0.1654151242728715\n",
-      "Size of Union: 9455\n",
-      "Size of Intersection: 1564\n"
+      "Jaccard Similarity: 0.08763959871285254\n",
+      "Size of Union: 10566\n",
+      "Size of Intersection: 926\n"
      ]
     }
    ],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "b5a92e23-ebf4-45a3-a6bc-9ca4423fcc78",
    "metadata": {},
    "outputs": [
@@ -435,9 +435,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jaccard Similarity: 0.18014230271668824\n",
-      "Size of Union: 9276\n",
-      "Size of Intersection: 1671\n"
+      "Jaccard Similarity: 0.07825278810408921\n",
+      "Size of Union: 10760\n",
+      "Size of Intersection: 842\n"
      ]
     }
    ],
@@ -450,27 +450,17 @@
    "id": "29881ea1-fc05-4996-963f-b297bd1e22ec",
    "metadata": {},
    "source": [
-    "# MNIST Flattned MLP"
+    "# Traditional MNIST ResNet18"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "f0a73e62-35a8-4fb3-8a1b-83631d18b49f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "paths = [f'class_means_distance/sanity_no_shuffle_data_mnist_mlp_seed_{x}_iter_0_max_epochs_400/train/train_raw_activations_epoch_' for x in [515,650,713]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "21be5fc7-7fa0-48f4-bb2e-f0b43f1aa402",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "paths[0] = 'class_means_distance/sanity_no_shuffle_data_mnist_mlp_seed_515_iter_1_max_epochs_400/train/train_raw_activations_epoch_'"
+    "paths = [f'class_means_distance/sanity_no_shuffle_data_mnist_resnet18_seed_{x}_iter_0_max_epochs_400/train/train_raw_activations_epoch_' for x in [515,650,713]]"
    ]
   },
   {
@@ -491,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "ea2b8dfe-755b-4811-b039-8933820f27ec",
    "metadata": {},
    "outputs": [],
@@ -502,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "266684dc-87dc-44c4-958b-f19ffb1e5bcf",
    "metadata": {},
    "outputs": [
@@ -510,9 +500,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jaccard Similarity: 0.44214101663152966\n",
-      "Size of Union: 8538\n",
-      "Size of Intersection: 3775\n"
+      "Jaccard Similarity: 0.11187720594270704\n",
+      "Size of Union: 12183\n",
+      "Size of Intersection: 1363\n"
      ]
     }
    ],
@@ -522,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "f91fe108-7306-47eb-b11d-d71233767f35",
    "metadata": {},
    "outputs": [
@@ -530,9 +520,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jaccard Similarity: 0.3812136139722347\n",
-      "Size of Union: 8932\n",
-      "Size of Intersection: 3405\n"
+      "Jaccard Similarity: 0.07908322903629537\n",
+      "Size of Union: 12784\n",
+      "Size of Intersection: 1011\n"
      ]
     }
    ],
@@ -550,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "3a0c3ec2-a676-4379-aad4-fe182f30d0bd",
    "metadata": {},
    "outputs": [],
@@ -561,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "d145b4cf-6745-4ae5-887c-ba8b0302ef17",
    "metadata": {},
    "outputs": [
@@ -569,9 +559,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jaccard Similarity: 0.4048187294010683\n",
-      "Size of Union: 8799\n",
-      "Size of Intersection: 3562\n"
+      "Jaccard Similarity: 0.23353978084802288\n",
+      "Size of Union: 10495\n",
+      "Size of Intersection: 2451\n"
      ]
     }
    ],
@@ -581,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "bd7e7d76-8bb3-4b76-9c30-d719ae58b4d8",
    "metadata": {},
    "outputs": [
@@ -589,23 +579,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jaccard Similarity: 0.2525931048108268\n",
-      "Size of Union: 10123\n",
-      "Size of Intersection: 2557\n"
+      "Jaccard Similarity: 0.06459948320413436\n",
+      "Size of Union: 13158\n",
+      "Size of Intersection: 850\n"
      ]
     }
    ],
    "source": [
     "bottom_10_percent_idxs, union_all, intersection_all = bottom_x_percent_per_label(merged_df, 0.1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42f207c3-f605-4031-8ba5-a566771ec0ad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
