--- a/sanity/seed_deterministic_proof.ipynb
+++ b/sanity/seed_deterministic_proof.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c33a3297-82d2-4171-b81b-94aacec65b11",
    "metadata": {},
    "outputs": [],
@@ -18,49 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "fbee297f-821a-4699-ab6b-64ed0296e6ff",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    },
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "scikit-learn\n",
-      "\n",
-      "numpy\n",
-      "\n",
-      "matplotlib\n",
-      "\n",
-      "torch\n",
-      "\n",
-      "pytorch-lightning\n",
-      "\n",
-      "wandb\n",
-      "\n",
-      "einops\n",
-      "\n",
-      "torchvision\n",
-      "\n",
-      "pandas\n"
-     ]
-    }
-   ],
-   "source": [
-    "install_packages()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "1a214193-ff0a-4f1d-9ed6-df120f1a3159",
    "metadata": {},
    "outputs": [
@@ -74,6 +32,16 @@
       "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /home/jovyan/.netrc\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mjmryan\u001b[0m to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -87,8 +55,7 @@
     "from get_grok import get_data\n",
     "import wandb\n",
     "KEY = '8b81e715f744716c02701d1b0a23c4342e62ad45'\n",
-    "wandb.login(key = KEY)\n",
-    "from helper_process import process_merge, top_x_percent_per_label, bottom_x_percent_per_label"
+    "wandb.login(key = KEY)"
    ]
   },
   {
@@ -96,7 +63,7 @@
    "id": "7cde5025-090c-46e8-bb1c-2ae8038e3c9d",
    "metadata": {},
    "source": [
-    "This notebook will go through CIFAR and MNIST flattened to go through a simple MLP with 5 hidden layers (7 total layers) where each hidden layer is dim 512 to 512. This goes across 3 seeds (515, 650, 713) with the same initialization hyperparameters. "
+    "This notebook shows that seeding with the same hyperparameters is deterministic."
    ]
   },
   {
@@ -113,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e1d7f926-983d-4bbc-a9a1-92e88105fe45",
    "metadata": {},
    "outputs": [],
@@ -123,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "58b4e5fc-7530-4472-9630-a04e7bd3ed72",
    "metadata": {},
    "outputs": [],
@@ -185,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "243b5091-c1d7-4c81-9255-4f08de3a0ba4",
    "metadata": {},
    "outputs": [],
@@ -231,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8a62c14f-4371-4973-a4f3-05c2e178f352",
    "metadata": {},
    "outputs": [],
@@ -267,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "37b68b28-f447-4700-a37c-e3405389c2f6",
    "metadata": {},
    "outputs": [],
@@ -306,143 +273,63 @@
    "id": "fffa2ccf-415c-4128-a5d1-8389f5b4cafd",
    "metadata": {},
    "source": [
-    "# CIFAR Flattned MLP"
+    "# Traditional CIFAR ResNet18"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "a23f7443-5ac4-4b2e-827d-bc2341f8eaa0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "paths = [f'class_means_distance/sanity_no_shuffle_data_cifar10_mlp_seed_{x}_iter_0_max_epochs_400/train/train_raw_activations_epoch_' for x in [515,650,713]]"
+    "paths = [f'class_means_distance/test_sanity_no_shuffle_data_cifar10_resnet18_seed_{x}_iter_0_max_epochs_30/train/train_raw_activations_epoch_' for x in [515,650,713]]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f9c6cc2a-b38c-4014-8537-15035e7d0ecf",
+   "id": "ae4337b9-5c0c-4317-91ca-bccda2675e43",
    "metadata": {},
    "source": [
-    "## Look at Class Means Across Seeds (Epoch 355)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "11fc2f3e-8512-459f-8500-eb68c0285cfa",
-   "metadata": {},
-   "source": [
-    "### Unnormalized L2"
+    "## Confirm Same Class Means for Same Seed (515, iter 0/1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0c55fe2f-e681-466b-a07b-e6738f4cb462",
+   "id": "a1f6b4fb-18d1-4119-adcd-b752a493101c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "epoch = 355\n",
-    "merged_df = process_merge(paths, epoch)"
+    "iter_0_515 = paths[0]\n",
+    "iter_1_515 = 'class_means_distance/test_sanity_no_shuffle_data_cifar10_resnet18_seed_515_iter_1_max_epochs_30/train/train_raw_activations_epoch_'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a6e81207-3daf-49ff-a7b8-9e42200475a2",
+   "id": "e14683f6-d109-4123-bd1a-6ab8eb3ad5fc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jaccard Similarity: 0.41501103752759383\n",
-      "Size of Union: 7248\n",
-      "Size of Intersection: 3008\n"
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "top_10_percent_idxs, union_all, intersection_all = top_x_percent_per_label(merged_df, 0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "153a1f60-ca9c-4133-aead-08927ce089d0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jaccard Similarity: 0.3764344809180678\n",
-      "Size of Union: 7494\n",
-      "Size of Intersection: 2821\n"
-     ]
-    }
-   ],
-   "source": [
-    "bottom_10_percent_idxs, union_all, intersection_all = bottom_x_percent_per_label(merged_df, 0.1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "36fd90ee-617a-40ed-94c7-dd0a7635794b",
-   "metadata": {},
-   "source": [
-    "### Unnormalized Cos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "f2d94cc1-9c50-4f86-9549-4dd336853530",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "epoch = 355\n",
-    "merged_df = process_merge(paths, epoch, distance_metric = 'cosine')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "33c44300-e5a1-4a06-a98a-7354bc47e8c7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jaccard Similarity: 0.1654151242728715\n",
-      "Size of Union: 9455\n",
-      "Size of Intersection: 1564\n"
-     ]
-    }
-   ],
-   "source": [
-    "top_10_percent_idxs, union_all, intersection_all = top_x_percent_per_label(merged_df, 0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "b5a92e23-ebf4-45a3-a6bc-9ca4423fcc78",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jaccard Similarity: 0.18014230271668824\n",
-      "Size of Union: 9276\n",
-      "Size of Intersection: 1671\n"
-     ]
-    }
-   ],
-   "source": [
-    "bottom_10_percent_idxs, union_all, intersection_all = bottom_x_percent_per_label(merged_df, 0.1)"
+    "for epoch in range(0, 30, 5):\n",
+    "    iter_0_dat = torch.load(iter_0_515 + str(epoch), map_location=torch.device('cpu'), weights_only=True)\n",
+    "    iter_1_dat = torch.load(iter_1_515 + str(epoch), map_location=torch.device('cpu'), weights_only=True)\n",
+    "\n",
+    "    print(torch.allclose(iter_0_dat, iter_1_dat))"
    ]
   },
   {
@@ -450,162 +337,64 @@
    "id": "29881ea1-fc05-4996-963f-b297bd1e22ec",
    "metadata": {},
    "source": [
-    "# MNIST Flattned MLP"
+    "# Traditional MNIST ResNet18"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "f0a73e62-35a8-4fb3-8a1b-83631d18b49f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "paths = [f'class_means_distance/sanity_no_shuffle_data_mnist_mlp_seed_{x}_iter_0_max_epochs_400/train/train_raw_activations_epoch_' for x in [515,650,713]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "21be5fc7-7fa0-48f4-bb2e-f0b43f1aa402",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "paths[0] = 'class_means_distance/sanity_no_shuffle_data_mnist_mlp_seed_515_iter_1_max_epochs_400/train/train_raw_activations_epoch_'"
+    "paths = [f'class_means_distance/test_sanity_no_shuffle_data_mnist_resnet18_seed_{x}_iter_0_max_epochs_30/train/train_raw_activations_epoch_' for x in [515,650,713]]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fe326180-7d4d-40cf-b3b9-d822bdc57bbe",
+   "id": "ee584868-d92a-4f6a-9503-878a91156ac2",
    "metadata": {},
    "source": [
-    "## Look at Class Means Across Seeds (Epoch 355)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c9709fc2-5143-4b8d-a550-05b51ddee1a2",
-   "metadata": {},
-   "source": [
-    "### Unnormalized L2"
+    "## Confirm Same Class Means for Same Seed (515, iter 0/1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "ea2b8dfe-755b-4811-b039-8933820f27ec",
+   "execution_count": 10,
+   "id": "63eecae2-ac6d-4688-b3f3-57a9055b624a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "epoch = 355\n",
-    "merged_df = process_merge(paths, epoch)"
+    "iter_0_515 = paths[0]\n",
+    "iter_1_515 = 'class_means_distance/test_sanity_no_shuffle_data_mnist_resnet18_seed_515_iter_1_max_epochs_30/train/train_raw_activations_epoch_'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "266684dc-87dc-44c4-958b-f19ffb1e5bcf",
+   "execution_count": 11,
+   "id": "444ea0b4-cf3f-4f24-b45f-55828d3def73",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jaccard Similarity: 0.44214101663152966\n",
-      "Size of Union: 8538\n",
-      "Size of Intersection: 3775\n"
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "top_10_percent_idxs, union_all, intersection_all = top_x_percent_per_label(merged_df, 0.1)"
+    "for epoch in range(0, 30, 5):\n",
+    "    iter_0_dat = torch.load(iter_0_515 + str(epoch), map_location=torch.device('cpu'), weights_only=True)\n",
+    "    iter_1_dat = torch.load(iter_1_515 + str(epoch), map_location=torch.device('cpu'), weights_only=True)\n",
+    "\n",
+    "    print(torch.allclose(iter_0_dat, iter_1_dat))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "f91fe108-7306-47eb-b11d-d71233767f35",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jaccard Similarity: 0.3812136139722347\n",
-      "Size of Union: 8932\n",
-      "Size of Intersection: 3405\n"
-     ]
-    }
-   ],
-   "source": [
-    "bottom_10_percent_idxs, union_all, intersection_all = bottom_x_percent_per_label(merged_df, 0.1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d92bef81-a069-4349-9a5b-81406a406e2f",
-   "metadata": {},
-   "source": [
-    "### Unnormalized Cos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "3a0c3ec2-a676-4379-aad4-fe182f30d0bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "epoch = 355\n",
-    "merged_df = process_merge(paths, epoch, distance_metric = 'cosine')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "d145b4cf-6745-4ae5-887c-ba8b0302ef17",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jaccard Similarity: 0.4048187294010683\n",
-      "Size of Union: 8799\n",
-      "Size of Intersection: 3562\n"
-     ]
-    }
-   ],
-   "source": [
-    "top_10_percent_idxs, union_all, intersection_all = top_x_percent_per_label(merged_df, 0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "bd7e7d76-8bb3-4b76-9c30-d719ae58b4d8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jaccard Similarity: 0.2525931048108268\n",
-      "Size of Union: 10123\n",
-      "Size of Intersection: 2557\n"
-     ]
-    }
-   ],
-   "source": [
-    "bottom_10_percent_idxs, union_all, intersection_all = bottom_x_percent_per_label(merged_df, 0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42f207c3-f605-4031-8ba5-a566771ec0ad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
